# T2I-BiasBench-Code

./: README.md  pyproject.toml  requirements.txt
configs/: study.yaml
configs/datasets/: bksdm.yaml  gemini.yaml  koala.yaml  sd_template.yaml
docs/: research_protocol.md
src/t2i_biasbench/: __init__.py  cli.py  config.py  constants.py  evaluate.py  extractors.py  io_utils.py  metrics.py  reporting.py  text_utils.py
tests/: test_metrics.py
